--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ a {
   cursor: pointer;
   font-weight: bold;
   color: black;
+  padding-top: 5px; 
 }
 a:link,
 a:visited,
@@ -192,10 +193,10 @@ dl dd {
 #view {
   display: inline-block;
   /* NOTE: Margin should match height in navigation.scss */
-  background-color: #fcfcfc;
+  background-color: #262525;
   padding: 20px 0;
   min-width: 100%;
-  min-height: 680px;
+  padding-bottom: 50px;
 }
 
 .button,
@@ -209,7 +210,7 @@ dl dd {
 
   border-radius: 50px;
   background-color: rgba(0, 0, 0, 0.15);
-  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.15);
   color: white;
   transition-duration: 0.4s;
   
@@ -231,8 +232,8 @@ dl dd {
   outline: none;
   background-color: rgba(0, 0, 0, 0.377);
 }
-.button.white {
-  background-color: white;
+.button.white { 
+  background-color: rgb(124, 50, 50);
   color: #4d97ff;
 }
 .button.pass {
@@ -337,15 +338,16 @@ dl dd {
     font-display: swap;
 }
 
+/*blob */
 .intro-banner .intro-container {
   min-height: 24rem;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  background-color: #555557;
+  background-color: #262525;
   background-size: auto;
   background-repeat: no-repeat;
-  background-position: 650px -60px;
+  background-position: 650px -75px;
   background-image: url("https://files.sobloxsy.com/blobv2.svg");
 }
 
@@ -3746,10 +3748,11 @@ a.social-messages-profile-link:hover {
   }
 }
 
-iframe {
-  border-radius: 10px;
+#youtube_video {
+  border-radius: 20px;
   border-width: 5px;
   border-color: rgba(0, 0, 0, 0.50);
+  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.15);
 }
 
 .box-text {
@@ -3777,6 +3780,20 @@ margin-bottom: -10px;
 height: auto;
 width: 100%;
 }
+
+#youtube_video {
+  box-shadow: 5px 6px 22px 11px rgba(0,0,0,0.26);
+}
+
+.intro-subnav {
+  background-color: rgb(53, 52, 52);
+}
+
+.ytp-title-link yt-uix-sessionlink {
+  font-family: gothammedium !important;
+}
+
+.
 </style>
 </head>
 <body>
@@ -3834,7 +3851,7 @@ width: 100%;
             <a href="/about">
               <div class="subnav-button button">About Us</div></a
             >
-            <a href="/Sitemap">
+            <a href="/sitemap">
               <div class="subnav-button button">Sitemap</div></a
             >
             <a href="/products/">
@@ -3843,15 +3860,7 @@ width: 100%;
           </div>
         </div>
       </div>
-      <svg id="visual" viewBox="0 0 900 200">
-        <path
-          d="M0 153L21.5 149C43 145 86 137 128.8 143.8C171.7 150.7 214.3 172.3 257.2 158.5C300 144.7 343 95.3 385.8 79.8C428.7 64.3 471.3 82.7 514.2 98.7C557 114.7 600 128.3 642.8 125.5C685.7 122.7 728.3 103.3 771.2 108.7C814 114 857 144 878.5 159L900 174L900 201L878.5 201C857 201 814 201 771.2 201C728.3 201 685.7 201 642.8 201C600 201 557 201 514.2 201C471.3 201 428.7 201 385.8 201C343 201 300 201 257.2 201C214.3 201 171.7 201 128.8 201C86 201 43 201 21.5 201L0 201Z"
-          fill="#252525"
-          stroke-linecap="round"
-          stroke-linejoin="miter"
-          style="transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1) 0s;"
-        ></path>
-      </svg>
+
     </div>
     <script src="/js/common.bundle.js"></script>
     <script src="/js/splash.intl.js"></script>
