--- a/index.html
+++ b/index.html
@@ -3802,7 +3802,7 @@ width: 100%;
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="format-detection" content="telephone=no" />
-  <title>Sobloxsy</title>
+  <title>Sobloxsy - Home</title>
   <meta name="description" content="hello lol." />
   <meta property="og:url" content="https://sobloxsy.com/" />
   <meta property="og:type" content="website" />
@@ -3818,6 +3818,11 @@ width: 100%;
   <script async="" src="//www.google-analytics.com/analytics.js"></script>
   <script src="/js/polyfill.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script
+    data-ad-client="ca-pub-5751343033961763"
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+  ></script>
 
   <body class="sus">
     <div id="view">
@@ -3860,7 +3865,6 @@ width: 100%;
           </div>
         </div>
       </div>
-
     </div>
     <script src="/js/common.bundle.js"></script>
     <script src="/js/splash.intl.js"></script>
