--- a/index.html
+++ b/index.html
@@ -3836,7 +3836,7 @@ width: 100%;
           <div class="flex-row intro-container">
             <div class="flex-row intro-content column">
               <h1 class="intro-header">
-                <span>Welcome, to the sobloxsy website</span>
+                <span>Welcome to the sobloxsy website</span>
                 <svg
                   version="1.0"
                   xmlns="http://www.w3.org/2000/svg"
@@ -4056,7 +4056,7 @@ width: 100%;
               </h1>
               <div class="flex-row intro-buttons">
                 <button class="button big-button">
-                  <a class="btntext" href="/create">Create</a>
+                  <a class="btntext" href="https://www.youtube.com/c/SoBloxsy/">Subscribe</a>
                 </button>
               </div>
             </div>
