--- a/products/index.html
+++ b/products/index.html
@@ -66,7 +66,7 @@ h4 {
   background-color: rgb(237, 237, 237);
 }
 
-img {
+p > img {
   width: 80%;
   background: transparent;
   border-radius: 25px;
@@ -90,17 +90,26 @@ a {
 
 .hold {
   display: inline-grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto auto auto;
   padding: 10px;
   margin-left: 10px;
-  margin-right: 10px; 
+  margin-right: 10px;
+}
+
+.smile {
+  height: 50px;
+  margin-bottom: -18px;
+  filter: invert(0);
 }
 
 </style>
 </head>
 <body>
 <title>Websites From Sobloxsy.</title>
-<h2>Websites From Sobloxsy.</h2>
+<h2>
+  Websites From Sobloxsy.
+  <img class="smile" src="https://files.sobloxsy.com/Iconlogo2.svg" />
+</h2>
 
 <div class="hold">
   <a href="https://justsearchit.sobloxsy.com"
@@ -121,7 +130,7 @@ a {
       <p>Our testing site.</p>
     </div>
   </a>
-    <a href="https://games.sobloxsy.com"
+  <a href="https://games.sobloxsy.com"
     ><div class="holder">
       <p class="aligncenter">
         <img src="https://files.sobloxsy.com/logob.png" />
@@ -130,7 +139,7 @@ a {
       <p>Our open-source game site.</p>
     </div>
   </a>
-      <a href="https://google.sobloxsy.com"
+  <a href="https://google.sobloxsy.com"
     ><div class="holder">
       <p class="aligncenter">
         <img src="https://google.sobloxsy.com/sobloxsy.png" />
@@ -140,6 +149,7 @@ a {
     </div>
   </a>
 </div>
+
 
 </body>
 </html>
