--- a/index.html
+++ b/index.html
@@ -3795,9 +3795,13 @@ width: 100%;
 
 .icon {
   height: 55px;
-  fill: rgb(66, 65, 65);
   vertical-align: baseline;
-  margin-bottom: -18px
+  margin-bottom: -18px;
+  filter: invert(1);
+}
+
+::selection {
+  filter: invert(1)
 }
 </style>
 </head>
@@ -3812,12 +3816,12 @@ width: 100%;
   <meta property="og:url" content="https://sobloxsy.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Sobloxsy" />
-  <meta property="og:description" content="This is the sobloxsy app." />
-  <meta property="og:image" content="https://sobloxsy.com/images/logo_sm.png" />
+  <meta property="og:description" content="This is the sobloxsy website." />
+  <meta property="og:image" content="https://files.sobloxsy.com/Iconlogo2.svg" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="986" />
   <meta property="og:image:height" content="860" />
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="https://files.sobloxsy.com/Iconlogo2.svg" />
   <link rel="stylesheet" href="/css/lib/normalize.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script async="" src="//www.google-analytics.com/analytics.js"></script>
@@ -3836,7 +3840,7 @@ width: 100%;
           <div class="flex-row intro-container">
             <div class="flex-row intro-content column">
               <h1 class="intro-header">
-                <span>Welcome to the sobloxsy website</span>
+                <span>Welcome, to the sobloxsy website</span>
                 <svg
                   version="1.0"
                   xmlns="http://www.w3.org/2000/svg"
@@ -3847,7 +3851,7 @@ width: 100%;
                   <metadata>Created by Sobloxsy.</metadata>
                   <g
                     transform="translate(0.000000,2048.000000) scale(0.100000,-0.100000)"
-                    class="icon"
+                    class=""
                     stroke="none"
                     align="bottom"
                   >
@@ -4056,7 +4060,7 @@ width: 100%;
               </h1>
               <div class="flex-row intro-buttons">
                 <button class="button big-button">
-                  <a class="btntext" href="https://www.youtube.com/c/SoBloxsy/">Subscribe</a>
+                  <a class="btntext" href="/create">Create</a>
                 </button>
               </div>
             </div>
