--- a/index.html
+++ b/index.html
@@ -3827,9 +3827,9 @@ width: 100%;
   <script src="/js/polyfill.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script
-    data-ad-client="ca-pub-5751343033961763"
     async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4607096681096687"
+    crossorigin="anonymous"
   ></script>
 
   <body class="sus">
@@ -4059,10 +4059,14 @@ width: 100%;
               </h1>
               <div class="flex-row intro-buttons">
                 <button class="button big-button">
-                  <a class="btntext" href="https://create.sobloxsy.com">Create</a>
+                  <a class="btntext" href="https://create.sobloxsy.com"
+                    >Create</a
+                  >
                 </button>
-				                <button class="button big-button">
-                  <a class="btntext" href="https://socoolgames.sobloxsy.com">Games</a>
+                <button class="button big-button">
+                  <a class="btntext" href="https://socoolgames.sobloxsy.com"
+                    >Games</a
+                  >
                 </button>
               </div>
             </div>
